--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="brand">
       <div class="logoWrap" aria-label="Logo Endzyless Store">
         <!-- Upload file logo kamu ke repo: logo.png -->
-        <img class="logoImg" src="logo.png" alt="Endzyless Store Logo">
+        <img class="logoImg" src="./logo.png" alt="Endzyless Store">
       </div>
       <div>
         <h1>Endzyless Store</h1>
