--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       <div>
         <h1>Endzyless Store</h1>
-        <p>Produk digital • Cepat • Aman • Terpercaya</p>
+        <p>Semua kebutuhan digitalmu ada disini!</p>
       </div>
     </div>
     <a class="chip" href="#produk">Produk</a>
