Tekan apprem index.html

--- a/index.html
+++ b/index.html
@@ -94,12 +94,9 @@
 
     <div class="sectionTitle">Kategori</div>
     <div class="grid">
-      <a class="card" href="app-prem.html">
-        <div class="icon">★</div>
-        <div class="meta">
-          <p class="t">Aplikasi Premium</p>
-          <p class="s">Canva, Capcut, Netflix, dll</p>
-        </div>
+      <a href="aplikasi.html" class="card">
+  <h3>Aplikasi Premium</h3>
+  <p>Canva, Capcut, Netflix, dll</p>
       </a>
 
       <a class="card" href="#" onclick="alert('Nanti kita buat halaman Sosial Media Marketing ya!')">
