--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         <p>Semua kebutuhan digitalmu ada disini!</p>
       </div>
     </div>
-    <a class="chip" href="app-prem.html">Mulai</a>
   </header>
 
   <main class="wrap">
@@ -94,9 +93,12 @@
 
     <div class="sectionTitle">Kategori</div>
     <div class="grid">
-      <a href="aplikasi.html" class="card">
-  <h3>Aplikasi Premium</h3>
-  <p>Canva, Capcut, Netflix, dll</p>
+      <a class="card" href="app-prem.html">
+<div class="icon">AP</div>
+<div class="meta">
+<p class="t">Aplikasi Premium</p>
+<p class="s">Canva, Capcut, Netflix, dll</p>
+</div>
       </a>
 
       <a class="card" href="#" onclick="alert('Nanti kita buat halaman Sosial Media Marketing ya!')">
