--- a/app-prem.html
+++ b/app-prem.html
@@ -137,25 +137,32 @@ color:var(--muted);
 <a href="canva.html" class="card">
 <div class="icon">C</div>
 <div class="name">Canva</div>
-<div class="desc">Desain premium</div>
 </a>
 
 <a href="#" class="card">
 <div class="icon">CP</div>
-<div class="name">Capcut</div>
-<div class="desc">Video editor pro</div>
+<div class="name">CapCut</div>
 </a>
+
+<a href="#" class="card">
+<div class="icon">AM</div>
+<div class="name">Alight Motion</div>
+</a>
+
 
 <a href="#" class="card">
 <div class="icon">NF</div>
 <div class="name">Netflix</div>
-<div class="desc">Streaming premium</div>
 </a>
 
 <a href="#" class="card">
 <div class="icon">YT</div>
 <div class="name">YouTube</div>
-<div class="desc">Tanpa iklan</div>
+</a>
+  
+<a href="#" class="card">
+<div class="icon">BS</div>
+<div class="name">Bstation</div>
 </a>
 
 </div>
